<resources>
    <string name="app_name">KotlinSamples</string>

    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="send_local_broadcast">Send broadcast</string>
    <string name="oops_alert_dialog">Oops…</string>
    <string name="alert_message">Flash not available in this device</string>
    <string name="transition_name">transition name</string>
    <string name="apple">Apple</string>
    <string name="orange">Orange</string>
    <string name="banana">Banana</string>
    <string name="price">Price: </string>

    <string name="sign_plus">+</string>
    <string name="sign_equal">=</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
</resources>
